Replace 99designs with john-markham

--- a/docs/layouts/partials/sidebar.html
+++ b/docs/layouts/partials/sidebar.html
@@ -1,5 +1,5 @@
 <div class="layout--logo">
-	<a class="logo" href="http://github.com/99designs/gqlgen">
+	<a class="logo" href="http://github.com/john-markham/gqlgen">
 		{{ partial "gqlgen.svg" }}
 		<span class="logo--name">gqlgen</span>
 	</a>
